adding Auto Complete TextField in search panel